--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -1,6 +1,4 @@
 apply plugin: 'java'
-apply plugin: 'application'
-mainClassName = "MyFirstProgramm"
 
 repositories{
     mavenCentral()
@@ -8,7 +6,7 @@ repositories{
 
 dependencies{
     implementation  'org.testng:testng:7.4.0'
-    implementation  'org.openqa.selenium:selenium-rc:1.0-20081010.060147'
+    implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
 }
 
 test {
